src/main/kotlin/com/example/hhplusweek3/error/InternalServerError.kt
package com.example.hhplusweek3.error

class InternalServerError(message: String) : RuntimeException(message)
